Endpoint for getting all users and their parking spots
